--- a/index.html
+++ b/index.html
@@ -8,88 +8,310 @@
   maximum-scale=5"
     />
 
-    <link rel="icon" href="devchallenges.png" />
-
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="styles.css" />
+
     <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <!-- Header -->
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
+    <header class="header">
+      <h1 class="header__h1">Classic Cheesecake Recipe</h1>
+
+      <div class="header__desc">
+        <svg
+          class="header__svg"
+          viewBox="0 0 13 8"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle cx="1.5" cy="1.5" r="1.5" fill="#C4C4C4" />
+          <circle cx="1.5" cy="6.5" r="1.5" fill="#C4C4C4" />
+          <circle cx="6.5" cy="1.5" r="1.5" fill="#C4C4C4" />
+          <circle cx="6.5" cy="6.5" r="1.5" fill="#C4C4C4" />
+          <circle cx="11.5" cy="1.5" r="1.5" fill="#C4C4C4" />
+          <circle cx="11.5" cy="6.5" r="1.5" fill="#C4C4C4" />
+        </svg>
+        <p class="header__p">
+          Look no further for a creamy and ultra smooth classic cheesecake
+          recipe! Paired with a buttery graham cracker crust, no one can deny
+          its simple decadence. For the best results, bake in a water bath.
         </p>
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+      <img class="header__img" src="photo1.png" alt="Cheescake Image" />
+    </header>
+
+    <!-- Contenido -->
+
+    <section class="section">
+      <article class="info">
+        <!-- Porciones -->
+        <div class="info__desc--1">
+          <svg
+            class="info__svg--especial"
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-check-lg"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M13.485 1.431a1.473 1.473 0 0 1 2.104 2.062l-7.84 9.801a1.473 1.473 0 0 1-2.12.04L.431 8.138a1.473 1.473 0 0 1 2.084-2.083l4.111 4.112 6.82-8.69a.486.486 0 0 1 .04-.045z"
+            />
+          </svg>
+          <p class="info__p--gris">YIELDS</p>
+          <p class="info__p--especial">12 servings</p>
+        </div>
+
+        <!-- Preparacion -->
+
+        <div class="info__desc--2">
+          <svg
+            class="info__svg"
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-clock-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"
+            />
+          </svg>
+          <p class="info__p--gris">PREP TIME</p>
+          <p class="info__p">45 minutes</p>
+        </div>
+
+        <!-- Coccion -->
+
+        <div class="info__desc--3">
+          <svg
+            class="info__svg"
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-clock-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"
+            />
+          </svg>
+          <p class="info__p--gris">COOK TIME</p>
+          <p class="info__p">1 hour</p>
+        </div>
+
+        <!-- Tiempo total -->
+
+        <div class="info__desc--4">
+          <svg
+            class="info__svg"
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-clock-fill"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"
+            />
+          </svg>
+          <p class="info__p--gris">TOTAL TIME</p>
+          <p class="info__p">7,75 hours</p>
+        </div>
+      </article>
+
+      <!-- S -->
+
+      <article class="ingredientes">
+        <h2 class="ingredientes__h2">Ingredients</h2>
+        <h3 class="ingredientes__h3">Graham Cracker Crust</h3>
+
+        <!-- Checkboxes Ingredientes -->
+        <!-- 1 -->
+        <input class="ingredientes__input" type="checkbox" name="1" />
+        <label for="1"
+          >1 and 1/2 cups (150g) graham cracker crumbs (about 10 full sheet
+          graham crackers)</label
+        >
+        <br />
+        <!-- 2 -->
+        <input class="ingredientes__input" type="checkbox" name="2" />
+        <label for="2"
+          >5 Tablespoons (70g) <b>unsalted butter</b> , melted</label
+        >
+        <br />
+
+        <!-- 3 -->
+        <input class="ingredientes__input" type="checkbox" name="3" />
+        <label for="3">1/4 cup (50g) <b>granulated sugar</b></label>
+
+        <!-- Cheesecake -->
+        <h3 class="ingredientes__h3">Cheesecacke</h3>
+
+        <!-- Checkboxes Chesecacke -->
+        <!-- 4 -->
+        <input class="ingredientes__input" type="checkbox" name="4" />
+        <label for="4"
+          >four 8-ounce blocks (904g) full-fat <b>cream cheese</b>, softened to
+          room temperature</label
+        ><br />
+
+        <!-- 5 -->
+        <input class="ingredientes__input" type="checkbox" name="5" />
+        <label for="5">1 cup (200g) <b>granulated sugar</b></label
+        ><br />
+
+        <!-- 6 -->
+        <input class="ingredientes__input" type="checkbox" name="6" />
+        <label for="6"
+          >1 cup (240g) full-fat <b>sour cream</b>, at room temperature</label
+        ><br />
+
+        <!-- 7 -->
+        <input class="ingredientes__input" type="checkbox" name="7" />
+        <label class="ingredientes__label" for="7"
+          >1 teaspoon <b>pure vanilla extract</b></label
+        ><br />
+
+        <!-- 8 -->
+        <input class="ingredientes__input" type="checkbox" name="8" />
+        <label class="ingredientes__label" for="8"
+          >2 teaspoons <b>fresh lemon juice</b> (optional, but
+          recommended)</label
+        ><br />
+
+        <!-- 9 -->
+        <input class="ingredientes__input" type="checkbox" name="9" />
+        <label class="ingredientes__label" for="9"
+          >2 teaspoons <b>fresh lemon juice</b> (optional, but
+          recommended)</label
+        ><br />
+
+        <!-- 10 -->
+        <input class="ingredientes__input" type="checkbox" name="10" />
+        <label class="ingredientes__label" for="10"
+          >3 large <b>eggs</b>, at room temperature</label
+        ><br />
+
+        <!-- 11 -->
+        <input class="ingredientes__input" type="checkbox" name="11" />
+        <label class="ingredientes__label" for="11"
+          >topping suggestions:
+          <i
+            >salted caramel, lemon curd, strawberry topping, chocolate ganache,
+            red wine chocolate ganache, fresh fruit, whipped cream, or raspberry
+            sauce
+          </i>
+          (recipe in notes)
+        </label>
+      </article>
+
+      <!-- Intructions -->
+      <article class="intructions">
+        <h2 class="intructions__h2">Intructions</h2>
+        <ol class="intructions__ol">
+          <li class="intructions__li">
+            Adjust the oven rack to the lower-middle position and preheat oven
+            to 350°F (177°C).
+          </li>
+          <li class="intructions__li">
+            <b>Make the crust:</b> Using a food processor, pulse the graham
+            crackers into crumbs. Pour into a medium bowl and stir in sugar and
+            melted butter until combined. (You can also pulse it all together in
+            the food processor.) Mixture will be sandy. Press firmly into the
+            bottom and slightly up the sides of a 9-inch or 10-inch springform
+            pan. No need to grease the pan first. I use the bottom of a
+            measuring cup to pack the crust down tightly. Pre-bake for 8
+            minutes. Remove from the oven and place the hot pan on a large piece
+            of aluminum foil. The foil will wrap around the pan for the water
+            bath in step 4. Allow crust to slightly cool as you prepare the
+            filling.
+          </li>
+          <li class="intructions__li">
+            <b>Make the filling:</b> Using a handheld or stand mixer fitted with
+            a paddle attachment, beat the cream cheese and granulated sugar
+            together on medium-high speed in a large bowl until the mixture is
+            smooth and creamy, about 2 minutes. Add the sour cream, vanilla
+            extract, and lemon juice then beat until fully combined. On medium
+            speed, add the eggs one at a time, beating after each addition until
+            just blended. After the final egg is incorporated into the batter,
+            stop mixing. To help prevent the cheesecake from deflating and
+            cracking as it cools, avoid over-mixing the batter as best you can.
+          </li>
+          <li class="intructions__li">
+            <b>Prepare the simple water bath (see note)</b> Boil a pot of water.
+            You need 1 inch of water in your roasting pan for the water bath, so
+            make sure you boil enough. I use an entire kettle of hot water. As
+            the water is heating up, wrap the aluminum foil around the
+            springform pan. Pour the cheesecake batter on top of the crust. Use
+            a rubber spatula or spoon to smooth it into an even layer. Place the
+            pan inside of a large roasting pan. Carefully pour the hot water
+            inside of the pan and place in the oven. (Or you can place the
+            roasting pan in the oven first, then pour the hot water in.
+            Whichever is easier for you.)
+          </li>
+          <li class="intructions__li">
+            Bake cheesecake for 55-70 minutes or until the center is almost set.
+            When it’s done, the center of the cheesecake will slightly wobble if
+            you gently shake the pan. Turn the oven off and open the oven door
+            slightly. Let the cheesecake sit in the oven in the water bath as it
+            cools down for 1 hour. Remove from the oven and water bath, then
+            cool cheesecake completely at room temperature. Then refrigerate the
+            cheesecake for at least 4 hours or overnight.
+          </li>
+          <li class="intructions__li">
+            Use a knife to loosen the chilled cheesecake from the rim of the
+            springform pan, then remove the rim. Using a clean sharp knife, cut
+            into slices for serving. For neat slices, wipe the knife clean and
+            dip into warm water between each slice.
+          </li>
+
+          <li class="intructions__li">
+            Serve cheesecake with desired toppings. Cover and store leftover
+            cheesecake in the refrigerator for up to 5 days.
+          </li>
+        </ol>
+
+        <!-- Link -->
+
+        <p class="link__p">
+          Source:
+          <a
+            class="link__a"
+            href="https://sallysbakingaddiction.com/classic-cheesecake/"
+            >https://sallysbakingaddiction.com/classic-cheesecake/</a
+          >
+        </p>
+      </article>
+    </section>
+
+    <!-- Footer -->
+
+    <footer class="footer">
+      <p class="footer__p">
+        created by
+        <a class="footer__a" href="https://github.com/ElLoboBohemio"
+          >LoboBohemio</a
+        >
+        - devChallenges.io
+      </p>
+    </footer>
   </body>
 </html>
